--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -16,6 +16,7 @@
 <div class="w3-bar w3-border w3-round">
 	<a href="{{ path('user_modify') }}" class="w3-bar-item w3-button w3-indigo"><i class="fa fa-pencil"></i>&nbsp;{{ 'modify'|trans }}</a>
 	<a href="{{ path('user_password') }}" class="w3-bar-item w3-button w3-light-grey"><i class="fa fa-unlock-alt"></i>&nbsp;{{ 'user.modify.password'|trans }}</a>
+	<a href="{{ path('easyadmin', { 'action': 'show', 'id': 7, 'entity': 'Site', 'menuIndex': -1, 'submenuIndex': -1 }) }}" class="w3-bar-item w3-button w3-light-grey"><i class="fa fa-unlock-alt"></i>&nbsp;Vers backend</a>
 </div>
 </div>
 
